Project_mine_safety/build/log/idf_py_stdout_output_46851
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/desd/Project_mine_safety/build/bootloader/esp-idf/esptool_py && /home/desd/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/desd/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/desd/Project_mine_safety/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/9] Building C object esp-idf/DHT22/CMakeFiles/__idf_DHT22.dir/DHT22.c.obj
FAILED: esp-idf/DHT22/CMakeFiles/__idf_DHT22.dir/DHT22.c.obj 
/home/desd/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/DHT22/include -I/home/desd/esp/esp-idf/components/newlib/platform_include -I/home/desd/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/desd/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/desd/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/desd/esp/esp-idf/components/freertos/esp_additions/include -I/home/desd/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/desd/esp/esp-idf/components/esp_hw_support/include -I/home/desd/esp/esp-idf/components/esp_hw_support/include/soc -I/home/desd/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/desd/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/desd/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/desd/esp/esp-idf/components/heap/include -I/home/desd/esp/esp-idf/components/log/include -I/home/desd/esp/esp-idf/components/soc/include -I/home/desd/esp/esp-idf/components/soc/esp32 -I/home/desd/esp/esp-idf/components/soc/esp32/include -I/home/desd/esp/esp-idf/components/hal/esp32/include -I/home/desd/esp/esp-idf/components/hal/include -I/home/desd/esp/esp-idf/components/hal/platform_port/include -I/home/desd/esp/esp-idf/components/esp_rom/include -I/home/desd/esp/esp-idf/components/esp_rom/include/esp32 -I/home/desd/esp/esp-idf/components/esp_rom/esp32 -I/home/desd/esp/esp-idf/components/esp_common/include -I/home/desd/esp/esp-idf/components/esp_system/include -I/home/desd/esp/esp-idf/components/esp_system/port/soc -I/home/desd/esp/esp-idf/components/esp_system/port/include/private -I/home/desd/esp/esp-idf/components/xtensa/include -I/home/desd/esp/esp-idf/components/xtensa/esp32/include -I/home/desd/esp/esp-idf/components/lwip/include -I/home/desd/esp/esp-idf/components/lwip/include/apps -I/home/desd/esp/esp-idf/components/lwip/include/apps/sntp -I/home/desd/esp/esp-idf/components/lwip/lwip/src/include -I/home/desd/esp/esp-idf/components/lwip/port/include -I/home/desd/esp/esp-idf/components/lwip/port/freertos/include -I/home/desd/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/desd/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/desd/esp/esp-idf/components/driver/include -I/home/desd/esp/esp-idf/components/driver/deprecated -I/home/desd/esp/esp-idf/components/driver/analog_comparator/include -I/home/desd/esp/esp-idf/components/driver/dac/include -I/home/desd/esp/esp-idf/components/driver/gpio/include -I/home/desd/esp/esp-idf/components/driver/gptimer/include -I/home/desd/esp/esp-idf/components/driver/i2c/include -I/home/desd/esp/esp-idf/components/driver/i2s/include -I/home/desd/esp/esp-idf/components/driver/ledc/include -I/home/desd/esp/esp-idf/components/driver/mcpwm/include -I/home/desd/esp/esp-idf/components/driver/parlio/include -I/home/desd/esp/esp-idf/components/driver/pcnt/include -I/home/desd/esp/esp-idf/components/driver/rmt/include -I/home/desd/esp/esp-idf/components/driver/sdio_slave/include -I/home/desd/esp/esp-idf/components/driver/sdmmc/include -I/home/desd/esp/esp-idf/components/driver/sigma_delta/include -I/home/desd/esp/esp-idf/components/driver/spi/include -I/home/desd/esp/esp-idf/components/driver/temperature_sensor/include -I/home/desd/esp/esp-idf/components/driver/touch_sensor/include -I/home/desd/esp/esp-idf/components/driver/twai/include -I/home/desd/esp/esp-idf/components/driver/uart/include -I/home/desd/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/desd/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/desd/esp/esp-idf/components/esp_pm/include -I/home/desd/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/desd/Project_mine_safety=. -fmacro-prefix-map=/home/desd/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/DHT22/CMakeFiles/__idf_DHT22.dir/DHT22.c.obj -MF esp-idf/DHT22/CMakeFiles/__idf_DHT22.dir/DHT22.c.obj.d -o esp-idf/DHT22/CMakeFiles/__idf_DHT22.dir/DHT22.c.obj   -c ../components/DHT22/DHT22.c
../components/DHT22/DHT22.c: In function 'getSignalLevel':
../components/DHT22/DHT22.c:86:17: error: implicit declaration of function 'ets_delay_us'; did you mean 'esp_rom_delay_us'? [-Werror=implicit-function-declaration]
   86 |                 ets_delay_us(1);                // uSec delay
      |                 ^~~~~~~~~~~~
      |                 esp_rom_delay_us
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
